# enterprise-policy-rag

./: .env.example  Policy_RAG_pipeline.ipynb  RAG_Pipeline_Stress_Test_Report.docx  app.py  generate_policies.py  policies.json  pyproject.toml
policies/: code_of_conduct.md  expense_policy.md  it_security_policy.md  leave_policy.md  remote_work_policy.md
