[project]
name = "enterprise-tldr"
version = "0.1.0"
description = "EnterPrise TLDR - Enterprise policy Q&A chatbot"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "langchain-openai>=0.2",
    "langchain-pinecone>=0.2",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "pinecone>=5.0",
    "ipykernel>=6.29",
    "rank-bm25>=0.2.2",
    "python-docx>=1.2.0",
]
